Expand/Collapse line and fixed bugs with MOVE_CARD action

--- a/src/components/line/Line.css
+++ b/src/components/line/Line.css
@@ -1,6 +1,5 @@
 .Line {
   width:100%;
-  height:300px;
 }
 
 .Line > .title {
